--- a/view/noticeboard/list.ejs
+++ b/view/noticeboard/list.ejs
@@ -89,6 +89,8 @@
                 <% }); %>
             </table>
         </div>
+
+        <!--페이지네이션-->
         <div class="pagination">
             <% if (currentPage > 1) { %>
                 <a href="/noticeboard?page=<%= currentPage - 1 %>&order=<%= order %>">이전</a>
